@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.lastship" version="4.0.0~rework1" name="Lastship" provider-name="Lastship">
+<addon id="plugin.video.lastship" version="4.0.0~rework2" name="Lastship" provider-name="Lastship">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
 		<import addon="repository.lastship" version="1.0.2" />
@@ -28,7 +28,8 @@
 		</assets>
 		<news>
 - neues Icon
-- 
+- Fix View Typ in movies.py
+- Autoplay-Qualität auswählbar
 		</news>
 	</extension>
 </addon>
